<resources>
    <string name="app_name">Recipes Randomizer</string>

    <string name="hello_blank_fragment">hallo</string>

    <!-- Util -->
    <string name="image_not_found">Image Not Found</string>
    <string name="text_not_found">Not Found</string>
    <string name="text_is_blank">Enter a valid text</string>
    <string name="nn">N/N</string>
    <string name="no_internet_connection">No internet connection, please verify your connectivity</string>

    <!-- random_recipes.xml -->
    <string name="generate_title_1">Generate random</string>
    <string name="generate_title_2">recipes</string>
    <string name="generate_description">Bring a list of 10 random recipes</string>
    <string name="generate_button">Generate</string>

    <!-- saved_recipes.xml -->
    <string name="saved_recipes_title">Saved recipes</string>
    <string name="all_recipes_title">All Recipes</string>
    <string name="ready_in_less_25min_title">Ready in less than 45 minutes</string>
    <string name="cheap_recipes_title">Cheap Recipes</string>
    <string name="vegan_recipes_title">Vegan Recipes</string>
    <string name="healthy_recipes_title">Healthy Recipes</string>

    <!-- search_recipes.xml -->
    <string name="search_title">SEARCH RECIPE</string>
    <string name="search_button">SEARCH</string>
    <string name="search_subtitle">Search through hundreds of thousands of recipes using advanced filtering.</string>
    <string name="search_edit_text">Search recipe…</string>
    <string name="optional">Optional Filters</string>
    <string name="cuisine_title">Cuisine</string>
    <string name="cuisine_subtitle">Select a country from the list</string>
    <string-array name="cuisine_array">
        <item>None</item>
        <item>African</item>
        <item>American</item>
        <item>British</item>
        <item>Cajun</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Eastern European</item>
        <item>European</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Indian</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Jewish</item>
        <item>Korean</item>
        <item>Latin American</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>Southern</item>
        <item>Spanish</item>
        <item>Thai</item>
        <item>Vietnamese</item>
    </string-array>
    <string name="diet_title">Diet</string>
    <string name="diet_subtitle">Select a diet from the list</string>
    <string-array name="diet_array">
        <item>None</item>
        <item>Gluten Free</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
    </string-array>


    <!-- bottom_nav.xml -->
    <string name="random_recipes_fragment_title">Random</string>
    <string name="search_recipes_fragment_title">Search</string>
    <string name="favorite_recipes_fragment_title">Favorites</string>

    <!-- recipe_details.xml -->
    <string name="servings">Servings:</string>
    <string name="ready_in">Ready in:</string>
    <string name="minutes">Min</string>
    <string name="cuisine">Cuisine:</string>
    <string name="ingredients">Ingredients</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dish">Dish:</string>
    <string name="information">Information</string>
    <string name="cheap">Cheap</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="pairedWines">Paired Wines</string>
    <string name="similarRecipes">Similar Recipes</string>

</resources>